@@ -17,7 +17,8 @@ xymon (4.3.25) stable; urgency=high
    * "Jump to page" redirect functionality fixed on findhost.sh (Reported by Francois Claire)
    * When a note is present for a host, the info page no longer has a spurious
      hostname on the text link
-
+   * Add --noexec option to logfetch to ignore commands to dynamically list files. 
+     (Suggested by Jeremy Laidman) 
 
  -- Japheth Cleaver <cleaver-xymon@terabithia.org>  Mon, XX Dec 2015 17:40:00 -0800
 
