@@ -15,6 +15,8 @@ Changes from 4.3.24 -> 4.3.25 (unreleased)
 * "Jump to page" redirect functionality fixed on findhost.sh (Reported by Francois Claire)
 * When a note is present for a host, the info page no longer has a spurious
   hostname on the text link
+* Add --noexec option to logfetch to ignore commands to dynamically list files.
+  (Suggested by Jeremy Laidman)
 
 
 Changes from 4.3.23 -> 4.3.24 (23 Nov 2015)
